@@ -1,2 +1,1 @@
-[{"name":"Say something","description":"Say something funny","utterances":["say something"," say some thing"," say something wise"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["say"]},{"name":"Play Some Music","description":"Play random music in the music library","utterances":["play some music"," play music"," play a song"," i want music"," i want a song"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","'music;101;/home/pi/AUDIOFILES;*'"]},{"name":"Play Some Rock","description":"play rock music","utterances":["rock and roll"," rock n roll"," play rock"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","'rock and roll;100;/home/pi/AUDIOFILES-ROCK;*'"]},{"name":"Do the cat","description":"Do the cat","utterances":["do the cat"," cat"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;cat.mp3'"]},{"name":"Dance","description":"Dance","utterances":["dance"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["move"]},{"name":"Do the dog","description":"Do the dog","utterances":["do the dog"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;dog.mp3'"]},{"name":"Do the lion","description":"Do the lion","utterances":["do the lion","lion"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;lion.mp3'"]},{"name":"Do the wolf","description":"Do the wolf","utterances":["do the wolf","wolf"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;wolf.mp3'"]},{"name":"Do the donkey","description":"Do the donkey","utterances":["do the donkey","donkey"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;donkey.mp3'"]},{"name":"Do the frog","description":"Do the frog","utterances":["do the frog"," frog"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;frog.mp3'"]},{"name":"Move","description":"Plays some movement tricks","utterances":["move","dance"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-pytho
-n-sdk/wirepod/runCmd.sh","execargs":["move"]},{"name":"Italian Test 01","description":"do the cat","utterances":["fai il gatto"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;cat.mp3'"]},{"name":"Say in italian","description":"Vector says a random sentence in italian","utterances":["dimmi qualcosa","di qualcosa","illuminami"," illumina mi"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["sayIntl","it"]}]
+[{"name":"Turn lights on","description":"Turns light on","utterances":["lights on","christmas time"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/turnOnLightsWithSound.sh","execargs":["1"]},{"name":"Turn lights off","description":"Turns light off","utterances":["lights off","shut down"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/turnOffLightsWithSound.sh","execargs":["1"]},{"name":"Say something","description":"Say something funny","utterances":["say something"," say some thing"," say something wise"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["say"]},{"name":"Play Some Music","description":"Play random music in the music library","utterances":["play some music"," play music"," play a song"," i want music"," i want a song"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","'music;101;/home/pi/AUDIOFILES;*'"]},{"name":"Play Some Rock","description":"play rock music","utterances":["rock and roll"," rock n roll"," play rock"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","'rock and roll;100;/home/pi/AUDIOFILES-ROCK;*'"]},{"name":"Do the cat","description":"Do the cat","utterances":["do the cat"," cat"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;cat.mp3'"]},{"name":"Dance","description":"Dance","utterances":["dance"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["move"]},{"name":"Do the dog","description":"Do the dog","utterances":["do the dog"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;dog.mp3'"]},{"name":"Do the lion","description":"Do the lion","utterances":["do the lion","lion"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;lion.mp3'"]},{"name":"Do the wolf","description":"Do the wolf","utterances":["do the wolf","wolf"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;wolf.mp3'"]},{"name":"Do the donkey","description":"Do the donkey","utterances":["do the donkey","donkey"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;donkey.mp3'"]},{"name":"Do the frog","description":"Do the frog","utterances":["do the frog"," frog"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;frog.mp3'"]},{"name":"Move","description":"Plays some movement tricks","utterances":["move","dance"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["move"]},{"name":"Italian Test 01","description":"do the cat","utterances":["fai il gatto"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["play","' ;100;/home/pi/AUDIOFILES-ANIMALS;cat.mp3'"]},{"name":"Say in italian","description":"Vector says a random sentence in italian","utterances":["dimmi qualcosa","di qualcosa","illuminami"," illumina mi"],"intent":"intent_greeting_hello","params":{"paramname":"","paramvalue":""},"exec":"/home/pi/vector-python-sdk/wirepod/runCmd.sh","execargs":["sayIntl","it"]}]
